<resources>
    <string name="app_name">My SSK Samaj</string>
    <string name="google_map_api_key">AIzaSyDorCalFDNbceGCtjwS6yk9Y5Oy3Ybni0c</string>
    <string name="email_id">Email Id</string>
    <string name="first_name">First Name</string>
    <string name="mobile_number">Mobile Number</string>
    <string name="last_name">Last Name</string>
    <string name="fathers_name">Father\'s Name</string>
    <string name="upload_images">Upload Images</string>
    <string name="cancel">Cancel</string>
    <string name="register">Register</string>
    <string name="upload_photo_id">Upload Photo Id</string>
    <string name="upload_id_proof">Upload Id Proof (Adhar card /Pan card)</string>
    <string name="login">Login</string>
    <string name="forget_password"><u>Forgot password?</u> </string>
    <string name="guest">Guest</string>
    <string name="password">Password</string>
    <string name="sign_up">Sign Up</string>
    <string name="username">Username</string>
    <string name="gender">Gender</string>
    <string name="male">Male</string>
    <string name="female">Female</string>
    <string name="next">Next</string>
    <string name="about_family">About Family</string>
    <string name="desired_partner_introduction">Desired Partner Introduction</string>
    <string name="gallery">Gallery</string>
    <string name="camera">Camera</string>
    <string name="facebook">Facebook</string>
    <string name="profile_picture">Profile Picture</string>
    <string name="add_kundli">add kundli</string>
    <string name="date_of_birth">Date of Birth</string>
    <string name="birth_time">Select Birth Time</string>
    <string name="finish">Finish</string>
    <string name="vegetarian">Vegetarian</string>
    <string name="non_vegetarian">Non-Vegetarian</string>
    <string name="select_drinking_habits">Select Drinking Habits</string>
    <string name="select_dietary_habits">Select Dietary Habits</string>
    <string name="yes">Yes</string>
    <string name="no">No</string>
    <string name="occasionally">Occasionally</string>
    <string name="select_smoking_habits">Select Smoking Habits</string>
    <string name="mother_tongue">Mother Tongue</string>
    <string name="married_status">Marital Status</string>
    <string name="height">Height </string>
    <string name="height_t">Height</string>
    <string name="country">Country</string>
    <string name="state">State</string>
    <string name="city">City</string>
    <string name="eduction">Education</string>
    <string name="eduction_in">Education In</string>
    <string name="working_with">Working With</string>
    <string name="working_as">Working As</string>
    <string name="annual_income">Annual Income</string>
    <string name="father_status">Father Status</string>
    <string name="with">With</string>
    <string name="as">As</string>
    <string name="mother_status">Mother Status</string>
    <string name="not_married">Not Married</string>
    <string name="married">Married</string>
    <string name="joint">Joint</string>
    <string name="nuclear">Nuclear</string>
    <string name="to">Max Age</string>
    <string name="age">Age </string>
    <string name="eduction_area">Education Area</string>
    <string name="profession_area">Profession Area</string>
    <string name="body_type">Body Type</string>
    <string name="birth_place">Birth Place</string>
    <string name="gotra">Gotra</string>
    <string name="rashi">Rashi</string>
    <string name="nakshatra">Nakshatra</string>
    <string name="charan">Charan</string>
    <string name="naadi">Naadi</string>
    <string name="gan">Gan</string>
    <string name="upload_kundli">Upload Kundli</string>
    <string name="search">Search</string>
    <string name="search_list">Search List Activity</string>
    <string name="profile_for">Profile for</string>
    <string name="sibling">Sibling</string>
    <string name="parent">Parent</string>
    <string name="self">Candidate</string>
    <string name="updatetitle">New update available!</string>
    <string name="empty_editText">Fields can not be empty…!</string>
    <string name="internet_connection">No internet connection…!</string>
    <string name="retry">Retry</string>
    <string name="designation">Designation</string>
    <string name="company_name">Company Name</string>
    <string name="_0">0</string>
    <string name="min_age">Min Age</string>
    <string name="min_height">Min</string>
    <string name="max_height">Max</string>
    <string name="eduction_information">Education Information</string>
    <string name="enter_mobile_number">Enter Mobile Number</string>
    <string name="submit">Submit</string>
    <string name="address">Address</string>
    <string name="professional_info">Professional Information</string>
    <string name="location">Location</string>
    <string name="partner_preference">Partner Preference</string>
    <string name="professional_preference">Professional Preference</string>
    <string name="location_preference">Location Preference</string>
    <string name="open">Open</string>
    <string name="close">Close</string>
    <string name="inches">1\'5"</string>
    <string-array name="visible_to">

        <item>Candidate</item>
        <item>Parent</item>
        <item>Both</item>

    </string-array>
    <string-array name="drop_age">
        <item><b>--Select Age--</b></item>
        <item>18</item>
        <item>19</item>
        <item>20</item>
        <item>21</item>
        <item>22</item>
        <item>23</item>
        <item>24</item>
        <item>25</item>
        <item>26</item>
        <item>27</item>
        <item>28</item>
        <item>29</item>
        <item>30</item>
        <item>31</item>
        <item>32</item>
        <item>33</item>
        <item>34</item>
        <item>35</item>
        <item>36</item>
        <item>37</item>
        <item>38</item>
        <item>39</item>
        <item>40</item>
        <item>41</item>
        <item>42</item>
        <item>43</item>
        <item>44</item>
        <item>45</item>
        <item>46</item>
        <item>47</item>
        <item>48</item>
        <item>49</item>
        <item>50</item>
        <item>51</item>
        <item>52</item>
        <item>53</item>
        <item>54</item>
        <item>55</item>
        <item>56</item>
        <item>57</item>
        <item>58</item>
        <item>59</item>
        <item>60</item>
    </string-array>
    <string-array name="drop_height">
        <item><b>--Select Height--</b></item>
        <item>4.0 ft</item>
        <item>4.1 ft</item>
        <item>4.2 ft</item>
        <item>4.3 ft</item>
        <item>4.4 ft</item>
        <item>4.5 ft</item>
        <item>4.6 ft</item>
        <item>4.7 ft</item>
        <item>4.8 ft</item>
        <item>4.9 ft</item>
        <item>4.10 ft</item>
        <item>4.11 ft</item>
        <item>5.0 ft</item>
        <item>5.1 ft</item>
        <item>5.2 ft</item>
        <item>5.3 ft</item>
        <item>5.4 ft</item>
        <item>5.5 ft</item>
        <item>5.6 ft</item>
        <item>5.7 ft</item>
        <item>5.8 ft</item>
        <item>5.9 ft</item>
        <item>5.10 ft</item>
        <item>5.11 ft</item>
        <item>6.0 ft</item>
        <item>6.1 ft</item>
        <item>6.2 ft</item>
        <item>6.3 ft</item>
        <item>6.4 ft</item>
        <item>6.5 ft</item>
        <item>6.6 ft</item>
        <item>6.7 ft</item>
        <item>6.8 ft</item>
        <item>6.9 ft</item>
        <item>6.10 ft</item>
        <item>6.11 ft</item>
        <item>7.0 ft</item>

    </string-array>
    <string-array name="drop_married">
        <item><b>--Select Married Status--</b></item>
        <item> Single</item>
        
        <item> Awaiting Divorce </item>
        <item> Divorced </item>
        <item> Widowed </item>
        <item> Annulled </item>

    </string-array>
    <string-array name="drop_rashi">

        <item><b>--Select Rashi--</b></item>
        <item>Aries</item>
        <item>Taurus</item>
        <item>Gemini</item>
        <item>Cancer</item>
        <item>Leo</item>
        <item>Virgo</item>
        <item>Libra</item>
        <item>Scorpio</item>
        <item>Sagittarius</item>
        <item>Capricorn</item>
        <item>Aquarius</item>
        <item>Pisces</item>

    </string-array>
    <string-array name="drop_nakshtra">

        <item><b>--Select Nakshatra--</b></item>
        <item>Ashwini</item>
        <item>Bharani</item>
        <item>Kritika</item>
        <item>Rohini</item>
        <item>Mrigashirsha</item>
        <item>Ardra</item>
        <item>Punarvasu</item>
        <item>Pushya </item>
        <item>Ashlesha </item>
        <item>Magha </item>
        <item>Purva or Purva Phalguni </item>
        <item>Uttara or Uttara Phalguni </item>
        <item>Hasta </item>
        <item>Chitra </item>
        <item>Swati </item>
        <item>Visakha </item>
        <item>Anuradha </item>
        <item>Jyeshtha </item>
        <item>Mula </item>
        <item>Purva Ashadha </item>
        <item>Uttara Aṣaḍha </item>
        <item>Sravaṇa</item>
        <item>Sraviṣṭha or Dhanishta</item>
        <item>Shatabhisha or Satataraka</item>
        <item>Purva Bhadrapada </item>
        <item>Uttara Bhadrapada </item>
        <item>Revati </item>

    </string-array>
    <string-array name="drop_nadi">

        <item><b>--Select Nadi--</b></item>
        <item>Adhi Nadi</item>
        <item>Madhya Nadi</item>
        <item>Antya Nadi</item>

    </string-array>
    <string-array name="drop_gan">

        <item><b>--Select Gan--</b></item>
        <item>Devgan</item>
        <item>Rakshasgan</item>
        <item>Manushyagan</item>

    </string-array>
    <string-array name="drop_charan">

        <item><b>--Select Charan--</b></item>
        <item>1</item>
        <item>2</item>
        <item>3</item>
        <item>4</item>

    </string-array>
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="send_interest">Send Interest</string>
    <string name="sponsored_by">Powered by</string>
    <string name="powerd_by">Ezacus Technology </string>
    <string name="about_us">About Us</string>
    <string name="privacy_policy">T &amp; C</string>
    <string name="contact_us">Contact Us</string>
    <string name="logo">logo</string>
    <string name="backbutton">backButton</string>
    <string name="logout">Logout</string>
    <string name="ignore">Ignore</string>
    <string name="shortlist">Shortlist</string>
    <string name="shortlisted">Shortlisted</string>
    <string name="intro">My name is Pradnya and finding a good partner for me. and I am completed MBA and M.Com and at present working in private company</string>
    <string name="lifestyle_and_appearance">Lifestyle and Appearance</string>
    <string name="family_details">Family Details</string>
    <string name="text_introduction">Text introduction </string>
    <string name="slim">Slim</string>
    <string name="recently_matches">Recent Matches</string>
    <string name="recently_joint">Recently Joined</string>
    <string name="chat">Chat</string>
    <string name="back_button">back button</string>
    <string name="home">Home</string>
    <string name="login_business">Login</string>
    <string name="recently_visitors">Profile View</string>
    <string name="profile_visitors">Profile Visitors</string>
    <string name="exit">Exit</string>
    <string name="invite_list">Invite List</string>
    <string name="my_contact">Contacts</string>
    <string name="my_profile">My Profile</string>
    <string name="near_by">Near by</string>
    <string name="business_profile">Profile</string>
    <string name="business_insert">Insert Business</string>
    <string name="confirm_password">Confirm Password</string>
    <string name="candidate">Candidate</string>
    <string name="our_location">Current Location</string>
    <string name="notification">Notification</string>
    <string name="insertnews">Insert News</string>
</resources>