<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto">

    <!--<item
        android:id="@+id/nav_news_search"
        android:icon="@drawable/ic_search_white_18dp"
        android:title="@string/search"
        app:showAsAction="ifRoom"
        />

    <item
        android:id="@+id/nav_news_status"
        android:title="@string/news_status"
        app:showAsAction="never"
        />-->

    <group
        android:id="@+id/nav_news"
        android:checkableBehavior="single">

        <item
            android:id="@+id/nav_news_home"
            android:icon="@drawable/ic_action_house_outline"
            android:title="@string/home" />

        <item
            android:id="@+id/nav_news_search"
            android:icon="@drawable/ic_action_search_magnifier_tool_outline"
            android:title="@string/search" />

        <item
            android:id="@+id/nav_nav_insert"
            android:icon="@drawable/ic_action_new_add_folder"
            android:title="@string/insertnews" />
       <!-- <item
            android:id="@+id/nav_business_profile"
            android:icon="@drawable/ic_action_users"
            android:title="@string/business_profile" />-->

       <!-- <item
            android:id="@+id/nav_business_nearBy"
            android:icon="@drawable/ic_action_placeholder2"
            android:title="@string/near_by" />-->

        <item
            android:id="@+id/nav_news_exit"
            android:icon="@drawable/ic_action_exit"
            android:title="@string/exit" />


    </group>

</menu>